[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyudon"
authors = [
  {name = "alfa0112", email = "syana.and.yuji@gmail.com"}
]
description = "The Udonarium API to create archived files on python."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "puremagic>=1.15"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "udon_deckgen.__version__"}

[project.scripts]
udon-deckgen = "udon_deckgen.__main__:main"
