[metadata]
name = pyudon
version = attr: pyudon.__version__.__version__
url = 
author = Alfa0112
author_email = syana.and.yuji@gmail.com
license_file = LICENSE
description = pyudon: The Udonarium API to create archived files on python.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =   
entry_points = 