[metadata]
name = pyudon
version = attr: pyudon.__version__.__version__
url = https://github.com/alfa0112/pyudon
author = alfa0112
author_email = syana.and.yuji@gmail.com
license_file = LICENSE
description = The Udonarium API to create archived files on python.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    puremagic>=1.15
entry_points =